--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,18 @@ h1 {
   color: white;
   background-color: black;
 }
+
+#start-btn {
+  background-color: bisque;
+  cursor: pointer;
+}
+
+.start-btn-hide {
+  display: none;
+}
+
+#humanBoard {
+  display: grid;
+  grid-template-columns: repeat(10, 50px);
+  background-color: aquamarine;
+}
